Bug 1818450 - Support getting attributed text with empty inputs. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D170939